{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 4,
  "lineage": "ba9eb2ee-f807-ab3a-6ffd-f1f7829eb914",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group/sg-0def0b252d58766f2",
            "description": "managed by terraform",
            "egress": [],
            "id": "sg-0def0b252d58766f2",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "844416514196",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-004d3065b8de617b4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sg-0def0b252d58766f2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0cbb88ed11aeb84f5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0cbb88ed11aeb84f5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0def0b252d58766f2",
            "security_group_rule_id": "sgr-0cbb88ed11aeb84f5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0cbb88ed11aeb84f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:844416514196:security-group-rule/sgr-0bc0436278887ae99",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0bc0436278887ae99",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0def0b252d58766f2",
            "security_group_rule_id": "sgr-0bc0436278887ae99",
            "tags": null,
            "tags_all": {},
            "to_port": 100
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "844416514196",
            "id": "sgr-0bc0436278887ae99",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}